add some components

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,7 @@
 ---
+import Hr from "../components/Hr.astro";
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
 ---
 
 <html lang="en">
@@ -9,7 +12,11 @@
     <meta name="generator" content={Astro.generator} />
     <title>Scott Hallock</title>
   </head>
-  <body>
-    <h1 class="font-bold text-3xl">My little space on the internet</h1>
+  <body
+    class="container mx-auto flex min-h-screen flex-col bg-slate-100 max-w-3xl border-red-300 border"
+  >
+    <Header />
+    <Hr />
+    <Footer />
   </body>
 </html>
