add three.js and animation component

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import Hr from "../components/Hr.astro";
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
+import ThreeAnimation from "../components/ThreeAnimation.astro";
 ---
 
 <html lang="en">
@@ -16,7 +17,7 @@ import Footer from "../components/Footer.astro";
     class="container mx-auto flex min-h-screen flex-col bg-slate-100 max-w-3xl border-red-300 border"
   >
     <Header />
-    <Hr />
+    <ThreeAnimation />
     <Footer />
   </body>
 </html>
