add tailwind typography and blog post to test formatting

--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -23,9 +23,9 @@ const { Content } = await post.render();
   <head>
     <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
   </head>
-  <body>
+  <body class="container mx-auto flex min-h-screen flex-col max-w-3xl">
     <Header />
-    <main>
+    <main class="prose">
       <Content />
     </main>
   </body>
