--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,9 +12,7 @@ import Footer from "../components/Footer.astro";
     <meta name="generator" content={Astro.generator} />
     <title>Scott Hallock</title>
   </head>
-  <body
-    class="container mx-auto flex min-h-screen flex-col bg-slate-100 max-w-3xl border-red-300 border"
-  >
+  <body class="container mx-auto flex min-h-screen flex-col max-w-3xl">
     <Header />
     <Footer />
   </body>
