--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -25,7 +25,7 @@ const { Content } = await post.render();
   </head>
   <body class="container mx-auto flex min-h-screen flex-col max-w-3xl">
     <Header />
-    <main class="prose">
+    <main class="prose max-w-none">
       <Content />
     </main>
   </body>
