--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -14,7 +14,7 @@ const allPosts = (await getCollection("blog")).sort();
     <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
   </head>
   <body
-    class="container mx-auto flex min-h-screen flex-col bg-slate-100 max-w-3xl border-red-300 border"
+    class="container mx-auto flex min-h-screen flex-col max-w-3xl bg-zinc-900 text-zinc-300"
   >
     <Header />
     <main>
