--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,8 +12,11 @@ import Footer from "../components/Footer.astro";
     <meta name="generator" content={Astro.generator} />
     <title>Scott Hallock</title>
   </head>
-  <body class="container mx-auto flex min-h-screen flex-col max-w-3xl">
+  <body
+    class="container mx-auto flex min-h-screen flex-col max-w-3xl bg-zinc-900 text-zinc-300"
+  >
     <Header />
+    <main></main>
     <Footer />
   </body>
 </html>
