--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,7 +8,7 @@ import Hr from "../components/Hr.astro";
     <span class="px-4 py-2">
       &copy; {new Date().getFullYear()} Scott Hallock
     </span>
-    <a href="" class="ml-auto px-4 py-2 hover:underline">GitHub</a>
-    <a href="" class="px-4 py-2 hover:underline">LinkedIn</a>
+    <a href="" class="ml-auto px-4 py-2">GitHub</a>
+    <a href="" class="px-4 py-2">LinkedIn</a>
   </div>
 </footer>
