--- a/src/components/Hr.astro
+++ b/src/components/Hr.astro
@@ -1,6 +1,3 @@
----
----
-
-<div class="max-w-3xl mx-auto px-0">
-  <hr class="bg-gray-700" />
-</div>
+<hr
+  class="border-none h-0.5 bg-gradient-to-r from-indigo-400 via-sky-400 to-emerald-400"
+/>
