--- a/src/components/NavItem.astro
+++ b/src/components/NavItem.astro
@@ -1,4 +1,9 @@
 ---
+interface Props {
+  name: string;
+  href: string;
+}
+
 const { name, href } = Astro.props;
 ---
 
@@ -6,7 +11,7 @@ const { name, href } = Astro.props;
   <a class="" href={href}>{name}</a>
   <div class="absolute h-0.5 w-full overflow-hidden">
     <div
-      class="absolute h-0.5 w-full -translate-x-[105%] group-hover:translate-x-0 will-change-transform transition-transform duration-300 bg-gradient-to-r from-indigo-500 from-10% via-sky-500 via-30% to-emerald-400 to-90%"
+      class="absolute h-0.5 w-full -translate-x-[105%] group-hover:translate-x-0 will-change-transform transition-transform duration-300 bg-gradient-to-r from-indigo-400 via-sky-400 to-emerald-400"
     >
     </div>
   </div>
